[gd_scene load_steps=10 format=3 uid="uid://scqgxynxowrb"]

[ext_resource type="Script" path="res://game/core/game.gd" id="1_j8au2"]
[ext_resource type="Script" path="res://game/core/loader.gd" id="2_p5b8s"]
[ext_resource type="Script" path="res://game/core/debug_info.gd" id="3_0xkxq"]
[ext_resource type="Texture2D" uid="uid://tgykndvggm2o" path="res://main/loading_splash.png" id="3_512x5"]
[ext_resource type="Texture2D" uid="uid://drssc5o2ehjq" path="res://main/logo.png" id="4_yi0ok"]

[sub_resource type="Animation" id="Animation_sprsr"]
resource_name = "EndLoad"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Screen:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_oievw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Screen:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_xk7kp"]
resource_name = "StartLoad"
length = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Screen:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a1c02"]
_data = {
&"EndLoad": SubResource("Animation_sprsr"),
&"RESET": SubResource("Animation_oievw"),
&"StartLoad": SubResource("Animation_xk7kp")
}

[node name="Game" type="Node"]
script = ExtResource("1_j8au2")
metadata/_custom_type_script = ExtResource("1_j8au2")

[node name="Loader" type="CanvasLayer" parent="."]
layer = 5
visible = false
script = ExtResource("2_p5b8s")
metadata/_custom_type_script = ExtResource("2_p5b8s")

[node name="Screen" type="Control" parent="Loader"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Image" type="TextureRect" parent="Loader/Screen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_512x5")
stretch_mode = 6

[node name="Logo" type="TextureRect" parent="Loader/Screen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -168.0
offset_right = 400.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_yi0ok")

[node name="ProgressBar" type="ProgressBar" parent="Loader/Screen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = 144.0
offset_right = 240.0
offset_bottom = 192.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Loader/Screen/ProgressBar"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 8.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
text = "Загрузка..."
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Loader"]
libraries = {
&"": SubResource("AnimationLibrary_a1c02")
}

[node name="DebugInfo" type="CanvasLayer" parent="."]
layer = 6
script = ExtResource("3_0xkxq")

[node name="FPSLabel" type="Label" parent="DebugInfo"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -320.0
offset_top = 24.0
offset_right = -200.0
offset_bottom = 48.0
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
text = "FPS: 60"
horizontal_alignment = 1

[node name="PingLabel" type="Label" parent="DebugInfo"]
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -320.0
offset_top = 56.0
offset_right = -200.0
offset_bottom = 80.0
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 4
text = "Пинг: 999 мс"
horizontal_alignment = 1

[node name="PingTimer" type="Timer" parent="DebugInfo/PingLabel"]
one_shot = true

[node name="ErrorDialog" type="AcceptDialog" parent="."]
auto_translate_mode = 1
title = "Ошибка!"
initial_position = 2
size = Vector2i(400, 112)
unresizable = true

[node name="ConnectingDialog" type="AcceptDialog" parent="."]
auto_translate_mode = 1
title = "Подключение"
initial_position = 2
size = Vector2i(400, 112)
unresizable = true
ok_button_text = "Отмена"
dialog_text = "Подключение к 192.168.100.1..."

[node name="WaitPlayersTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[connection signal="closed" from="." to="Loader" method="_on_game_closed"]
[connection signal="closed" from="." to="DebugInfo" method="_on_game_closed"]
[connection signal="joined" from="." to="DebugInfo" method="_on_game_joined"]
[connection signal="timeout" from="DebugInfo/PingLabel/PingTimer" to="DebugInfo" method="_on_ping_timer_timeout"]
[connection signal="canceled" from="ConnectingDialog" to="." method="close"]
[connection signal="confirmed" from="ConnectingDialog" to="." method="close"]
[connection signal="timeout" from="WaitPlayersTimer" to="." method="_on_wait_players_timer_timeout"]
